--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           alt="Robo do jogo Xenogears"
           id="id-robotron"
         />
-        <figcaption class="titulo">WELTALL<br />3000</figcaption>
+        <figcaption class="titulo">WELTALL<br />2000</figcaption>
       </section>
 
       <section class="box estatisticas">
@@ -60,11 +60,11 @@
             <div class="peca">
               <label for="" class="peca-titulo">Braços</label>
               <div class="controle">
-                <buttom
+                <botao
                   class="controle-ajuste"
                   data-controle="-"
                   data-peca="bracos"
-                  >-</buttom
+                  >-</botao
                 >
                 <input
                   type="text"
@@ -72,11 +72,11 @@
                   value="00"
                   data-contador=""
                 />
-                <buttom
+                <botao
                   class="controle-ajuste"
                   data-controle="+"
                   data-peca="bracos"
-                  >+</buttom
+                  >+</botao
                 >
               </div>
             </div>
@@ -84,11 +84,11 @@
             <div class="peca">
               <label for="" class="peca-titulo">Blindagem</label>
               <div class="controle">
-                <buttom
+                <botao
                   class="controle-ajuste"
                   data-controle="-"
                   data-peca="blindagem"
-                  >-</buttom
+                  >-</botao
                 >
                 <input
                   type="text"
@@ -96,11 +96,11 @@
                   value="00"
                   data-contador=""
                 />
-                <buttom
+                <botao
                   class="controle-ajuste"
                   data-controle="+"
                   data-peca="blindagem"
-                  >+</buttom
+                  >+</botao
                 >
               </div>
             </div>
@@ -108,11 +108,11 @@
             <div class="peca">
               <label for="" class="peca-titulo">Núcleos</label>
               <div class="controle">
-                <buttom
+                <botao
                   class="controle-ajuste"
                   data-controle="-"
                   data-peca="nucleos"
-                  >-</buttom
+                  >-</botao
                 >
                 <input
                   type="text"
@@ -120,11 +120,11 @@
                   value="00"
                   data-contador=""
                 />
-                <buttom
+                <botao
                   class="controle-ajuste"
                   data-controle="+"
                   data-peca="nucleos"
-                  >+</buttom
+                  >+</botao
                 >
               </div>
             </div>
@@ -132,11 +132,11 @@
             <div class="peca">
               <label for="" class="peca-titulo">Pernas</label>
               <div class="controle">
-                <buttom
+                <botao
                   class="controle-ajuste"
                   data-controle="-"
                   data-peca="pernas"
-                  >-</buttom
+                  >-</botao
                 >
                 <input
                   type="text"
@@ -144,11 +144,11 @@
                   value="00"
                   data-contador=""
                 />
-                <buttom
+                <botao
                   class="controle-ajuste"
                   data-controle="+"
                   data-peca="pernas"
-                  >+</buttom
+                  >+</botao
                 >
               </div>
             </div>
@@ -156,11 +156,11 @@
             <div class="peca">
               <label for="" class="peca-titulo">Foguetes</label>
               <div class="controle">
-                <buttom
+                <botao
                   class="controle-ajuste"
                   data-controle="-"
                   data-peca="foguetes"
-                  >-</buttom
+                  >-</botao
                 >
                 <input
                   type="text"
@@ -168,11 +168,11 @@
                   value="00"
                   data-contador=""
                 />
-                <buttom
+                <botao
                   class="controle-ajuste"
                   data-controle="+"
                   data-peca="foguetes"
-                  >+</buttom
+                  >+</botao
                 >
               </div>
             </div>
